--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-spinners": "^0.11.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
